fix header not aligning when screen is between 1280 to 1920 px wide

--- a/apps/forms-flow-ai/forms-flow-web/src/components/FOI/Header/foiheader.scss
+++ b/apps/forms-flow-ai/forms-flow-web/src/components/FOI/Header/foiheader.scss
@@ -119,14 +119,8 @@ nav h2 {
       padding: 0;
     }
   }
+  max-width: none !important;
 }
-
-@media (min-width: 1920px) {
-  .foiContainer {
-    max-width: 1920px !important;
-  }
-}
-
 
 /*  Mobile screens (phones, 500px and down) */
 @media only screen  and (max-width: 500px) {
